[package]
name = "esker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["derive"] }
glob = "0.3.0"
pulldown-cmark = "0.9.2"
slugify = "0.1.0"
